Fix overflowing mobile content

--- a/src/app/pages/landing-page/landing-page.component.scss
+++ b/src/app/pages/landing-page/landing-page.component.scss
@@ -5,6 +5,7 @@
 .content {
   align-items: center;
   max-width: 600px;
+  width: 100%;
 }
 
 #avatar {
